--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,8 @@ descriptions:
     desc: "Just some placeholder posts, lorem ipsum and the rest."
 
 gems: ['jekyll/scholar']
+
+scholar:
+  ...
+  bibliography_template: bib
+  ...
