--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,25 @@ descriptions:
 
 gems: ['jekyll/scholar']
 
+# for BibTeX
 scholar:
-  bibliography_template: bib
-  use_raw_bibtex_entry: true
+  style: apa
+  locale: en
+
+  sort_by: year
+  order: descending
+
+  bibliography_list_tag: ul
+
+  source: ./_bibliography
+  bibliography: cocolab
+  bibliography_template: <p>{{reference}} {{entry.annote}}</p>
+
+  replace_strings: true
+  join_strings:    true
+
+  details_dir:    bibliography
+  details_layout: bibtex.html
+  details_link:   "[Abstract/BibTeX]"
+
+  query: "@*"
